BUG:Div2 would become higher when PayListUL overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -192,18 +192,18 @@
 #Div2
 {
     grid-area: Div2;
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     // overflow-y: hidden;
     background-color: #fcfbe1;
 }
 
-#Div2>*
-{
-    display: block;
-    width: 100%;
-    height: 100%;
-}
+// #Div2>*
+// {
+//     display: block;
+//     width: 100%;
+//     height: 100%;
+// }
 
 // #Div2_1>input:nth-child(1)
 // {
